Fix contrast issue on team cards Fixes #48

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ footer {
 
 .ayub {
     background-color: #be4848;
+    color: white;
 }
 
 .nikke {
@@ -158,6 +159,7 @@ footer {
 
 .jamie {
     background-color: #639bc9;
+    color: white;
 }
 
 .social-media-icons {
